# fin_cli_agent

./: .gitignore  README.md  db_utils.py  main.py  pyproject.toml
Commands/: logs.py  reflect.py  summary.py  users.py
db/: expenses.json  income.json  jaswanth_settings.json
finagent/: __init__.py  __main__.py
finagent/commands/: logs.py  reflect.py  summary.py
json_files/: jaswanth_logs.json
